fix: optimized project for checkstyle